@@ -1,7 +1,6 @@
 BUGS
 
 TECH
-   *. combat feedback system to computer: when fire actually occurs.  sensors detecting impact.  etc 
    *. test ship phaser, laser systems against shield types - murder motel
    *. make ship torpedo launchers and torpedo containers-- see tech doc
    *. make ship impulse and warp engines -- see tech doc
