@@ -66,6 +66,14 @@
 #     Zapper Masks (AHELP ZAPPERMASKS) from the command line for 
 #     syntax on zapper-masks.
 # 
+# ... EVENT="GROUPKILLS" NUM=[NUMBER] ZAPPERMASK="[ZAPPERMASK]"  SIZE=[NUMBER]...
+#     [NUM] is the number of kills required to get the achievement.
+#     [SIZE] is the minimum group size to apply the event
+#     [ZAPPERMASK] is a standard mask denoting mobs whos death gains the 
+#     player a kill count towards this achievement. See archon help on 
+#     Zapper Masks (AHELP ZAPPERMASKS) from the command line for 
+#     syntax on zapper-masks.
+# 
 # ... EVENT="STATVALUE" ABOVEBELOW="[ABOVE/BELOW]" STAT="[STAT] VALUE=[VALUE] ...
 #     [STAT] is the name of the player stat to check.  These are things like
 #     CURRENT STRENGTH, MAXSTRENGTH, WEIGHT, CURRENT ARMOR, MANA, CURRENT MANA,
