@@ -19,6 +19,7 @@
  17. Alchemy now supports powders/dusts
  18. New prayer: sense chants
  19. Weaponsmith/Fletching now supports min range data
+ 20. New achievement type GROUPKILL
  
   
 # Build 5.9.11.1 Release 02/26/2021
